# Stora

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: make-icon.mjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: advisor.rs  lib.rs  main.rs  scheduler.rs  state.rs  tray.rs
apps/desktop/src-tauri/src/commands/: advanced.rs  apps.rs  cleanup.rs  developer.rs  knowledge.rs  mod.rs  scan.rs  settings.rs  storage.rs
apps/desktop/src/components/: AdvisorDialog.tsx  LocationExplanation.tsx  Treemap.test.ts  Treemap.tsx  UninstallFlow.tsx  common.tsx  icons.tsx
apps/desktop/src/lib/: api.ts  format.ts  types.ts
apps/desktop/src/pages/: AboutPage.tsx  ApplicationsPage.tsx  AutomationPage.tsx  CleanupPage.tsx  ComingSoonPage.tsx  DeveloperPage.tsx  DrivePressurePage.tsx  DuplicatesPage.tsx  HistoryPage.tsx  HomePage.tsx  LargeFilesPage.tsx  SettingsPage.tsx  StoragePage.tsx
apps/desktop/src/state/: AppContext.tsx
apps/desktop/src/styles/: app.css
crates/stora-activity/: Cargo.toml
crates/stora-activity/src/: lib.rs  observer.rs  snapshot.rs  userassist.rs
crates/stora-apps/: Cargo.toml
crates/stora-apps/src/: classify.rs  discovery.rs  footprint.rs  lib.rs  model.rs  uninstall.rs  unused.rs
crates/stora-cleaner/: Cargo.toml
crates/stora-cleaner/src/: categories.rs  execute.rs  lib.rs  plan.rs
crates/stora-core/: Cargo.toml
crates/stora-core/src/: cleanup.rs  error.rs  lib.rs  model.rs  settings.rs  task.rs
crates/stora-developer/: Cargo.toml
crates/stora-developer/src/: artifact.rs  lib.rs  project.rs  scan.rs  virtual_disk.rs
crates/stora-duplicates/: Cargo.toml
crates/stora-duplicates/src/: finder.rs  hash.rs  lib.rs
crates/stora-index/: Cargo.toml
crates/stora-index/examples/: scan_size.rs
crates/stora-index/src/: applications.rs  automation.rs  knowledge.rs  lib.rs  migrations.rs  queries.rs
crates/stora-knowledge/: Cargo.toml
crates/stora-knowledge/data/: locations.json
crates/stora-knowledge/src/: lib.rs
crates/stora-rules/: Cargo.toml
crates/stora-rules/src/: growth.rs  lib.rs  rule.rs
crates/stora-scanner/: Cargo.toml
crates/stora-scanner/src/: category.rs  lib.rs  walker.rs
crates/stora-security/: Cargo.toml
crates/stora-security/src/: authorize.rs  exclusions.rs  lib.rs  path.rs  protected.rs
crates/stora-winapi/: Cargo.toml
crates/stora-winapi/src/: credentials.rs  fileinfo.rs  known_folders.rs  lib.rs  recycle.rs  restore.rs  system.rs  volumes.rs
docs/: NEXT_FEATURES_PLAN.md  RELEASING.md  ROADMAP.md
migrations/: 001_initial.sql  002_scan_categories.sql  003_applications.sql  004_automation.sql  005_knowledge.sql
