[package]
name = "stora-apps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stora-core = { workspace = true }
stora-security = { workspace = true }
stora-winapi = { workspace = true }
stora-developer = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[dev-dependencies]
tempfile = { workspace = true }
