[package]
name = "stora-duplicates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stora-core = { workspace = true }
stora-security = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = { workspace = true }
