[package]
name = "stora"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Understand your storage."
default-run = "stora"

[lib]
name = "stora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
stora-core = { workspace = true }
stora-security = { workspace = true }
stora-winapi = { workspace = true }
stora-index = { workspace = true }
stora-scanner = { workspace = true }
stora-cleaner = { workspace = true }
stora-developer = { workspace = true }
stora-apps = { workspace = true }
stora-activity = { workspace = true }
stora-duplicates = { workspace = true }
stora-rules = { workspace = true }
stora-knowledge = { workspace = true }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
